image-list+react重构

--- a/frame-demo/redux/redux-1.html
+++ b/frame-demo/redux/redux-1.html
@@ -6,6 +6,7 @@
     <script src="../../scripts/redux/redux.js"></script>
 </head>
 <body>
+<h1>简单demo</h1>
 <button id="add">add</button>
 <button id="sub">sub</button>
 <script>
