--- a/pc-apps/particle/index.html
+++ b/pc-apps/particle/index.html
@@ -25,7 +25,8 @@
         color:{
             rgba:[100,100,100],
             isUp:false},//颜色阈值
-        delay:10,//动画起始时间浮动值
+        delay:50,//动画起始时间浮动值
+        duration: 50,//动画持续时间
         fillStyle:"white"
     });
 </script>
