--- a/pc-apps/particle/index.html
+++ b/pc-apps/particle/index.html
@@ -22,10 +22,13 @@
         imgPath:"my.png",
         col:3,
         row:3,
+        animate:"easeOutBounce",
+        orginPos: {x:0, y: 0},
+        orginOffset: {x:0, y: 0},
         color:{
             rgba:[100,100,100],
             isUp:false},//颜色阈值
-        delay:10,//动画起始时间浮动值
+        delay:0,//动画起始时间浮动值
         fillStyle:"white"
     });
 </script>
