--- a/mobile-apps/tech/tomato.html
+++ b/mobile-apps/tech/tomato.html
@@ -106,7 +106,7 @@
                 elm.className = "tomato tomato1";
                 elm.style.cssText = "position:fixed; right:0rem; bottom:0rem;opacity:1; z-index:1";
 
-                let rem = parseInt($('html').css("fontSize"));
+                var rem = parseInt($('html').css("fontSize"));
                 var startX = -rem * 0.4;
                 var startY = - rem * 0.5;
                 var endX = -window.innerWidth/2 + rem * 0.3;
